--- a/slides/EDUC641_10_inference.Rmd
+++ b/slides/EDUC641_10_inference.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Summarizing and Displaying Continuous Data 2"
-subtitle: "EDUC 641: Unit 3 Part 2"
+title: "Normal distributions and the Central Limit Theorem"
+subtitle: "EDUC 641: Unit 3 Part 3"
 author: "David D. Liebowitz"
 #date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
@@ -33,7 +33,10 @@ extra_css <- list(
   ".red-pink" = list(color= "red_pink"),
   ".grey-light" = list(color= "grey_light"),
   ".purple" = list(color = "purple"),
-  ".small" = list("font-size" = "90%"))
+  ".large" = list("font-size" = "120%"),
+  ".small" = list("font-size" = "90%"),
+  ".tiny" = list("font-size" = "70%"),
+  ".tiny2" = list("font-size" = "50%"))
 
 write_extra_css(css = extra_css, outfile = "my_custom.css")
 
@@ -57,28 +60,28 @@ who <- import(here::here("data", "life_expectancy.csv")) %>%
 ---
 # Class goals
 
-- Describe special features of a normal distribution
+- Describe special features of a normal (and standard normal) distribution
+- Interpret a $z$-statistic table
 - Describe the distribution of repeated sample statistics drawn from a population, how this relates to the Central Limit Theorem (CLT) and how this is informative to statistical hypothesis testing
-- Determine whether the mean value of a sample is different than a defined population value (when provided the *SD* of the variable, aka $Z$-test)
-- Conduct one-sample $t$-tests
+- Determine whether the mean value of a sample is different than a defined population mean, both when the population standard deviation of the variable is known ( $z$-test) and when it is unknown (one-sample $t$-test)
 
 ---
-# Life Expectancy Data
+# Life expectancy data
 
 ### Reminder of our motivation: 
 
-Suppose you are working for the World Health Organization and are investigating life expectancy across different regions. 
+Suppose you are working for the World Health Organization and are investigating life expectancy across different regions. Using this dataset, we can ask questions like:
 
-> Using this dataset, we can ask questions like:
 > * How does life expectancy compare in high- vs. middle- and low-income countries?
 > * Do individuals living in countries with more total years of attendance in school experience, on average, higher life expectancy?
-
 
 **But**, before making comparisons between social/economic conditions, we want to start with describing our data. Let's say we *know* information on life expectancy about all the countries in the world, but we can only collect information on things like school experience on *some* countries.<sup>1</sup>
 
 **Our second task:** .blue[How similar are these subset of countries' average life expectancy to our known "population" average?]
 
-.footnote[[1] This is somewhat of a simplification. As we will learn, even if we had data on *all* countries, we wouldn't really know the "population" average; in fact, we almost never do and we are always estimating it]
+.small[*Note*: I've updated EDUC641_7_code.R with some tasks from last class and the one bit of coding we'll do at the very end of this unit. These next two classes are conceptual, so focus your energies there.]
+
+.footnote[[1] This is somewhat of a simplification. As we will learn, even if we had data on *all* countries, we wouldn't really know the "population" average; in fact, we almost never do and we are always estimating it.]
 
 ---
 class: middle, inverse
@@ -96,7 +99,7 @@ ggplot(subset(penguins, species == "Adelie"), aes(flipper_length_mm)) +
   geom_density() + 
   ggtitle("Flipper Length of Adelie Penguins") +
   xlab("Flipper Length (mm)") +
-  theme_minimal()
+  theme_minimal(base_size = 14)
 ```
 ]
 .pull-right[
@@ -107,27 +110,34 @@ ggplot(birthweight, aes(Birthweight)) +
   geom_density() +
   ggtitle("Human Birthweight") +
   xlab("Birthweight (kg)") +
-  theme_minimal()
+  theme_minimal(base_size = 14)
 ```
 ]
 
 ---
-# Normal Distributions
+# Normal distributions
 The normal distribution is a mathematical function that is a particularly specified form of this phenomenon using two parameters:
 * Mean $(\mu)$
-* Standard Deviation $(sigma)$
+* Standard Deviation $(\sigma)$
 
 It is defined by the following probability density function: 
 $$ p(X|\mu, \sigma) = \frac{1}{\sqrt{2\pi\sigma}}exp[-\frac{(X-\mu)^2}{2\sigma^2}] $$
 $$X\sim N(\mu,\sigma)$$
+.purple[*Don't need to know this formula!*]
+
+--
+
 **The normal curve is a defined distribution of values that has several mathematically useful properties.**
 
-> "All models are wrong, but some are useful." - George Box
+--
+
+.large[.red[**It is NOT the same thing and is entirely distinct conceptually from "bell curves" in the wild!!!**]]
+
 
 ---
-# Normal Distributions
+# Normal distributions
 
-A normal distribution is a **theoretical** distribution with the following characteristics:
+A normal distribution is a theoretical mathematical distribution with the following characteristics:
 
 Central Tendency:
 + The mean, median, and mode are equivalent values.
@@ -144,7 +154,9 @@ Shape:
 
 ---
 
-# Normal Distributions
+# Normal distributions
+
+More characteristics of the normal distribution:
 
 * All members of a population fall within the normal distribution (it represents the whole of observations)
 
@@ -182,16 +194,17 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ---
 
 # Empirical Rule
-We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the **empirical rule**.
+We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the .blue[**empirical rule**].
 
 .pull-left[
 A randomly selected observation has an approximately...
 * **68% chance of being within 1 SD** of the mean.
  + $P(-1 < Z < 1) = 0.683$
 ]
+
 .pull-right[
 ```{r}
-emp_rule <- ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
+ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   stat_function(fun = dnorm) +
   stat_function(fun = dnorm,
                 xlim = c(-1, 1),
@@ -214,7 +227,7 @@ emp_rule <- ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ---
 # Empirical Rule
 
-We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the **empirical rule**.
+We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the .blue[**empirical rule**].
 
 .pull-left[
 A randomly selected observation has an approximately...
@@ -253,7 +266,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ---
 # Empirical Rule
 
-We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the **empirical rule**.
+We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the .blue[**empirical rule**].
 
 .pull-left[
 A randomly selected observation has an approximately...
@@ -310,12 +323,12 @@ ggplot(data.frame(x = c(-20, 20)), aes(x = x)) +
 
 ```
 * Regardless of the mean and standard deviation, the probability of selecting any particular value of that population at random always sums to 1.
-* The empirical rule still applies (e.g., 68% of observations occur within 1 SD of the mean).
+* The empirical rule still applies (e.g., 68% of observations occur within 1 *SD* of the mean, 95.5% within 2 *SD* of mean, etc.).
 ---
 
-# Standard Normal Distribution
+# Standard normal distribution
 
-* The **standard** normal distribution has a mean of 0 and a standard deviation of 1.
+* The .blue[**standard normal distribution**] has a mean of 0 and a standard deviation of 1.
   
 ```{r}
 ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
@@ -324,12 +337,12 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 ```
 
-* The x-axis represents z-scores, meaning an observation's value represents how far it is from the mean.
+* In this case, the x-axis represents $z$-scores, meaning an observation's value represents how far it is from the mean
 
-  + A z-score of -1 indicates that an observation is 1 SD below the mean.
-  + A z-score of +2 indicates that an observation is 2 SD above the mean.
+  + A $z$-score of -1 indicates that an observation is 1 SD below the mean
+  + A $z$-score of +2 indicates that an observation is 2 SD above the mean
 
-* With a standard normal distribution, we can easily calculate the percentage of observations under any region.
+* With a standard normal distribution, we can easily calculate the percentage of observations under any region
 
 ---
 # Area under the normal curve
@@ -351,7 +364,7 @@ To answer this question, we just need to find the area of the shaded portion und
 
 ---
 # Area under the normal curve
-* We can either use some calculus or (more straightforward) a z-score look-up table to calculate the area under the normal curve.
+* We can either use some calculus or (more straightforward) a $z$-score [look-up table](https://www.math.arizona.edu/~rsims/ma464/standardnormaltable.pdf) to calculate the area under the normal curve.
 
 ```{r}
 ztest_plot +
@@ -365,14 +378,24 @@ Either approach would show the area above 1.5 SD of a standard normal curve is .
 
 If the results of a basketball skills test fell in a standard normal distribution, then this would imply that 7 percent of all individuals score 1.5 SD or higher on this test.
 
+--
+
+.blue[Given these few facts about normal distributions, we are now ready to move on to understand how and why **statistical inference** is possible...!]
+
+--
+**But first...**
+
 ---
-# $Z$-test
+# You try
+
 Let's try it with our WHO data:
 * Suppose that the population mean national life expectancy is 71.64 $(\mu)$ with a SD of 8.15 $(\sigma)$.
 
-* **Assuming a normal distribution, what is the probability of randomly selecting a country with a life expectancy greater than 76?**
+* **Assuming that country-level average life expectancies follow a normal distribution (they don't!), what is the probability of randomly selecting a country with a life expectancy greater than 76?**
 
-* First, we need to standardize our value before we can calculate the percentage of observations above our z-score.
+* First, we need to standardize our life expectancy value and give it a z-score. Then, use the $z$-score [look-up table](https://www.math.arizona.edu/~rsims/ma464/standardnormaltable.pdf) to answer the question.
+
+--
 
 $$ z = \frac{76-71.64}{8.15} = 0.535$$
 
@@ -397,27 +420,9 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 
 ---
-# $Z$-test
+# You try...answered!
 
-```{r}
-z.test = function(x,mu,popvar){
-
-one.tail.p <- NULL
-
-z.score <- round((mean(x)-mu)/(popvar/sqrt(length(x))),3)
-
-one.tail.p <- round(pnorm(abs(z.score),lower.tail = FALSE),3)
-
-cat(" z =",z.score,"\n",
-
-"one-tailed probability =", one.tail.p,"\n",
-
-"two-tailed probability =", 2*one.tail.p )}
-
-z.test(x = 76, mu = 71.64, popvar = 8.15)
-```
-
-The area under the curve above a z-score of 0.53 is .30. Therefore, the probability of randomly selecting a country with a national life expectancy greater than 76 is 30%.
+The proportion of the area under the curve above a z-score of 0.53 is 0.30. Therefore, there is a 30 percent probability of randomly selecting a country with a national life expectancy greater than 76.
 
 ```{r}
 ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
@@ -439,12 +444,21 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   theme_classic()
 ```
 
+--
+
+> "Ok, but this seems only helpful in the unrealistic case of observing a variable with a perfectly normal distribution. How does this help us in the real world?"
+
+--
+
+Get ready to have your mind blown by the beauty of the .blue[.large[**Central Limit Theorem**]]!
+
 ---
 class: middle, inverse
 
 # Central Limit Theorem and statistical inference
+
 ---
-# Population v. sample distribution
+# Population v. sample distributions
  
 Using the WHO dataset, let's say we want to identify the mean life expectancy across all countries. However, let's also assume we only have the resources to sample from 10 countries.
 
@@ -494,9 +508,9 @@ ggplot() +
 ---
 # Sample estimates
 
-* Assume that our <span style="color: blue;">true population mean $(\mu)$ </span> is 71.64. 
+* Assume that our .blue[true population mean] $\color{blue}{(\mu)}$ is 71.64. 
 
-* Each possible random sample of 10 countries will produce its own <span style="color: red;"> sample mean $(\bar{x})$ or population mean estimate </span>.
+* Each possible random sample of 10 countries will produce its own .red[sample mean] $\color{red}{(\bar{x})}$ or .purple[population mean estimate] $\color{purple}{(\hat{\mu})}$.
 
 * These estimated means have their own variability around the true population mean.
 
@@ -542,7 +556,9 @@ marrangeGrob(plots, nrow=2, ncol=2, top = paste("Estimated Population Means Acro
 ---
 # Population v. sample distribution
 
-If we sample our population **100 times** and plot the estimated mean of each sample, the estimated means begin to form their own normal distribution. The mean of sample means is our <span style="color: orange;"> **estimated population mean** $(\hat{\mu})$ </span>.
+If we sample our population **100 times** and plot the estimated mean of each sample, the estimated means begin to form their own normal distribution. The mean of sample means is our .purple[**estimated population mean**] $\color{purple}{(\hat{\mu})}$.
+
+--
 
 ```{r, echo = F}
 samp_means <- tibble(samp = 1:1000, means = map_dbl(region_samp, ~mean(.$life_expectancy)))
@@ -550,7 +566,7 @@ samp_means <- tibble(samp = 1:1000, means = map_dbl(region_samp, ~mean(.$life_ex
 
 
 ```{r, animation.hook="gifski", interval = 0.4, echo = F, eval = T}
-for (i in 1:10) {
+for (i in 1:100) {
   x <- ggplot(subset(samp_means, samp <= i), aes(means)) +
     geom_histogram(fill = "orange", color = "grey") +
     geom_vline(xintercept = 71.64, color = "blue") +
@@ -579,25 +595,25 @@ for (i in 1:10) {
 
 ```
 
-The mean of our sampling distribution (mean of means) approaches the <span style="color: blue;"> population mean $({\mu})$</span>. 
+The mean of our sampling distribution (mean of means) approaches the .blue[**population mean**] $\color{blue}{({\mu})}$. 
 
 If we sampled all possible samples of size *n* from our population, our mean of sample means would be equal to the population mean.
 
 ---
-# Central Limit Theorem
+# Central Limit Theorem (CLT)
 
-* There is a difference between the fact that many populations approximate the normal distribution vs. the normal curve of sampling distributions.
-
-* Random sampling from the population **will return** means that will be asymptotically (approaching) normal in their distribution as the number of samples approaches infinity. This is mathematically what the Central Limit Theorem demonstrates.
+* Random sampling from the population **will return** means that will be asymptotically (approaching) normal in their distribution as the number of samples approaches infinity. With a little bit of math, the Central Limit Theorem proves this fact.
 
 * Because of that mathematical fact, we can conduct inference in the statistics.
+
+* We won't derive this formally, but instead will "prove" it by simulation (a few ways)
 
 --
 
 .pull-left[
 * Here is a histogram of the means of 1000 random samples from our WHO data.
  + The center of the distribution is our population mean.
- + The standard deviation is the standard error of the mean.
+ + The standard deviation is the .blue[**standard error of the mean (SEM)**].
 ]
 
 .pull-right[
@@ -631,58 +647,81 @@ ggplot(samp_means, aes(means)) +
 Even though our life expectancy distribution is only approximately normal, the distribution of our sample means **is** (approaching) normal.
 
 ---
-# Central Limit demonstration
+# CLT demonstration
 
 See the following the link for more demonstrations of the central limit theorem:
-{https://onlinestatbook.com/stat_sim/sampling_dist/ }
+[https://onlinestatbook.com/stat_sim/sampling_dist/](https://onlinestatbook.com/stat_sim/sampling_dist/)
 
 ---
 # Central Limit Theorem
 
-> Given a population mean $\mu$ and standard deviation of $\sigma$, the sampling distribution of the mean is a normal distribution with a mean equal to $\mu$ and standard deviation equal to $\frac{\sigma}{\sqrt{n}}$, where *n* is the sample size.
+> Given a population mean $\mu$ and standard deviation of $\sigma$, the sampling distribution of the mean is a normal distribution with a mean equal to $\mu$ and standard deviation equal to $\frac{s}{\sqrt{n}}$, where *s* is the standard deviation and *n* is the sample size.
 
-> The distribution of sample means will approach the normal distribution as the sample size increases regardless of the shape of the population distribution.
+--
 
-* The sampling distribution of means approximates a normal distribution because it is estimating a statistic of the population distribution. It is not "recreating" the shape of the population distribution.
+* The distribution of sample means will approach the normal distribution as the sample size increases regardless of the shape of the population distribution. The standard error of the mean (SD of estimated mean) will shrink as our sample size increases.
 
-* Center: Mean of sample means is the population mean.
-$$ \mu_\bar{X} = \mu$$
+* Center: Mean of sample means is the population mean: $\bar{X}_\bar{x} = \mu$
 
 * Spread: Standard deviation of sample means is the standard error of the mean
 
-$$ \sigma_\bar{X} = \frac{\sigma}{\sqrt{n}}$$
+$$ \sigma_\bar{x} = \frac{\sigma}{\sqrt{n}}$$
 
-```{r, eval = F, echo = F}
-for (i in seq(1, 100, 10)) {
- x <- ggplot(who, aes(life_expectancy)) +
-     geom_histogram(fill = "darkred", color = "grey", bins = 30) +
-     geom_vline(xintercept = 71.64, color = "blue") +
-     geom_vline(xintercept = mean(samp_means$means[samp_means$samp <= i]), color = "green") +
-     geom_label(aes(
-       x = 71.64,
-       y = +Inf,
-       vjust = 2,
-       label = 71.64
-     ),
-     colour = "blue",
-     size = 4) +
-     xlim(50, 85) +
-   xlab("Mean Life Expectancy") +
-     theme_minimal()
-   print(x)
- }
+* The sampling distribution of means approximates a normal distribution because it is estimating a statistic of the population distribution. It does not "recreate" the shape of the population distribution.
 
-```
+--
+
+.small[*Again, there is a difference between the fact that many populations approximate the normal distribution (i.e., "bell curves") vs. the normal curve of sampling distributions.*]
+
+---
+# You interpret
+
+> At your table, take turns explaining what you understand the Central Limit Theorem to show and why might this be useful for making statistical inference.
 
 ---
 class: middle, inverse
 
-# One sample $t$-tests
+# One sample $z$- and $t$-tests
 
+---
+# $z$-test
+
+A $z$-test is a statistical test to determine whether two population means are different when the variances are known and the sample size is large.
+
+Let's try this with our WHO data:
+
+> Suppose that we want to test whether the population mean life expectancy is greater than 70, and we know that the "true" population standard deviation is 8 years. We can draw a random sample of observations and pose the following null hypothesis:
+
+> $H_0$: In the population, the mean life expectancy is 70.
+
+> $H_A$: In the population, the mean life expectancy is greater than 70.
+
+We draw a sample and calculate the average life expectancy in the sample: 71.64. We set our $\alpha$-threshold at 0.05.
+
+We construct our $z$-score as follows:
+
+$$\frac{71.64-70}{8} = 0.205$$
+---
+# $z$-test
+
+> Suppose that we want to test whether the population mean life expectancy is greater than 70, and we know that the "true" population standard deviation is 8 years. We can draw a random sample of observations and pose the following null hypothesis:
+
+> $H_0$: In the population, the mean life expectancy is 70.
+
+> $H_A$: In the population, the mean life expectancy is greater than 70.
+
+Our $z$-score is .blue[**0.205**].
+
+How can we use our $z$-statistic [look-up table](https://www.math.arizona.edu/~rsims/ma464/standardnormaltable.pdf) to determine whether there is a less than 5 percent chance that our observed mean life expectancy is different from 70?
+
+
+What do you conclude from your test?<sup>1</sup>
+
+.footnote[[1] *We are going to walk through the steps in class. Just looking at the slides is not sufficient here to know how to do this.*]
 
 ---
 # Population variance
-* In a z-test, the population standard deviation is assumed to be known.
+* In a $z$-test, the population standard deviation is assumed to be known.
 
 * In practice, we **rarely** know the true population standard deviation **even if we observe all individuals in our "population"** (e.g., all students in a state, all countries in the world). This is because:
   + Measurement error (e.g., we didn't measure how long everyone lived accurately)
@@ -692,16 +731,18 @@ class: middle, inverse
 
 --
 
-Thus, we tend to use ** $t$-distributions** to make our inferences, because these do not require us to know population variability.
+Thus, we tend to use **Student's $t$-distributions** to make our inferences, because these do not require us to know population variability.<sup>1</sup>
+
+.footnote[[1] The name comes a pseudonym ("Student") used in papers written by [William Sealy Gossett](https://en.wikipedia.org/wiki/William_Sealy_Gosset), the Head Experimental Brewer at Guinness, in which he developed the statistical theory around the *t*-distribution. His interest in statistics was in improvements in the cultivation of barley grains. I have reviewed several biographical articles about him and none attribute eugenic beliefs to him, but he was friendly with Fisher and Pearson, so proceed with caution.]
 
 ---
 # $t$-distributions
-* Assume that the *population* standard deviation $(\sigma)$ is unknown. Instead, it uses the *sample* standard deviation. 
+* Assume that the *population* standard deviation $(\sigma)$ is unknown. Instead, it uses the *sample* standard deviation $(s)$. 
 * $t$-distributions with smaller sample sizes have "fatter" tails. Assumes more uncertainty with smaller sample sizes.
-* Resemble $Z$-distributions as .red[**degrees of freedom**] increase.
+* Resemble $z$-distributions as .red[**degrees of freedom**] increase.
 
 ---
-# An aside on degrees of freedom
+# Degrees of freedom
 
 The .red[**degrees of freedom**] refers to the number of values in the calculation of a statistic that are free to vary. 
 
@@ -718,11 +759,17 @@ This is because once you know the mean and all but one of the values of the obse
 
 In this case, therefore, our degrees of freedom are $5 - 1$; i.e. 4.
 
-
 ---
-class: middle, inverse
+# Unbiased variance estimates
 
-# Quiz
+As you'll recall, the formula for the standard deviation we used was:
+$$\sigma = \sqrt{\frac{\Sigma_{i=1}^n(x_i-\mu)^2}{N}}$$
+
+but, when we calculate this in reality, we using the .red[**sample mean**] $(\bar{x})$ which is constructed **using each $x_i$**!
+
+You can read a more detailed statistical treatment of [Bessel's correction](https://en.wikipedia.org/wiki/Bessel%27s_correction), but the key takeaway is that using sample statistics generates bias (inaccuracy) in the estimation of the population statistics. To produce an unbiased estimate of the mean, variance or standard deviation, we should always subtract one from the sample size in the denominator. For example, when we construct the standard deviation of a sample, we should calculate it as:
+
+$$s = \sqrt{\frac{\Sigma_{i=1}^n(x_i - \bar{x})^2}{n-1}}$$
 
 ---
 # $t$-distributions
@@ -744,36 +791,16 @@ x <- ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
                 color = "green") +
   ggtitle("T-Distributions",
           subtitle = paste("df =", df_seq$df[i])) +
-  theme_classic() +
+  theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5))
 print(x)
 }
 ```
 
+--
 
-```{r , echo=F, animation.hook="gifski", interval=0.4, eval = F}
-ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
-  stat_function(fun = dnorm,
-                aes(color = "normal")) +
-  stat_function(fun = dt, 
-                args = list(df = 5), 
-                aes(color = "5")) +
-  stat_function(fun = dt,
-                args = list(df = 10),
-                aes(color = "10")) +
-  stat_function(fun = dt,
-                args = list(df = 30),
-                aes(color = "30")) +
-  scale_colour_brewer("Degrees of Freedom", 
-                      palette = "Set1",
-                      limits = c("Normal", "5", "10", "30")) +
-  ggtitle("T-Distributions") +
-  theme_classic() +
-  theme(plot.title = element_text(hjust = 0.5))
-
-
-```
+As $n$ increases, the $t$-distribution approaches (asymptotically) the normal distribution. In large-ish samples (basically >650), the $t$- and $z$-statistics and test are essentially indistinguishable.
 
 ---
 # One sample $t$-test
@@ -784,20 +811,20 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   
   
 **Example Research Question:**
-Suppose the known average life expectancy is 76 years with a standard deviation of 3.2. Do countries around the Mediterranean Sea significantly differ from the known population average of 76?
+Suppose the known average life expectancy is 76 years. We collect a sample of all countries' life expectancy, and these have a standard deviation of 3.2 years. We would like to know whether countries around the Mediterranean Sea significantly differ from the known population average of 76?
 
 
 ---
 # One sample $t$-test
-*  The one sample t-test does **not** test the probability of obtaining the sample distribution or data itself, only the sample mean.
+*  The one sample $t$-test does **not** test the probability of obtaining the sample distribution or data itself, only the sample mean.
   
 *  Using the probability of obtaining a particular sample mean **Null Hypothesis** $(H_0)$: $\mu = K$, where $K$ is any constant.
 
 
 ---
 # One sample $t$-test
-* With a z-test, we were able to find the number of observations that fell beyond a particular value. That value was our z-statistic.
-* The t-statistic is functionally like a z-statistic, but for the t-distribution.
+* With a $z$-test, we were able to find the number of observations that fell beyond a particular value. That value was our $z$-statistic.
+* The $t$-statistic is functionally similar to the $z$-statistic, but for the $t$-distribution.
 
 ```{r}
 z_dist <- ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
@@ -807,7 +834,7 @@ z_dist <- ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   geom_label(x = 1, y = 0.25, label = "z-statistic") +
   xlab("z-score") +
   ggtitle("Standard Normal Distribution") +
-  theme_classic()
+  theme_minimal()
 
 
 
@@ -830,6 +857,7 @@ gridExtra::grid.arrange(z_dist, t_dist, ncol = 2)
 
 * Thus, the proportion of the area under the curve beyond our t-value also depends on our degrees of freedom.
 
+Here is a similar animated graphic as on slide 34, but now highlighting the changing proportion of the curve falling beyond a given $t$-statistic; in this case $t=1$.
 
 ```{r , echo=F, animation.hook="gifski", interval=0.4}
 samp_means <- tibble(df = seq(2, 20, 2), 
@@ -857,9 +885,10 @@ for (i in 1:10) {
       y = 0.04,
       label = samp_means$val[i])) +
   geom_vline(xintercept = 1) +
-  ggtitle("T-Distribution", 
+  ggtitle("t-distribution", 
                 subtitle = paste("Degrees of Freedom =", samp_means$df[i])) +
-    xlab("T-Statistic")
+    xlab("t-statistic") +
+  theme_minimal()
   print(x)
 }
 ```
@@ -867,18 +896,18 @@ for (i in 1:10) {
 ---
 # One sample $t$-test
 
-* To calculate a t-statistic, we use the same formula to calculate a z-score, but replace the population standard deviation with the sample's standard deviation.
+To calculate a t-statistic, we use the same formula to calculate a z-score, but replace the population standard deviation with the sample's standard deviation.
 
-Since we don't know the population standard deviation $(\mu)$, our samples standard deviation $(s)$ is used as an estimate of the population standard deviation $(\hat{\mu})$.
+Since we don't know the population standard deviation $(\sigma)$, we use our sample's standard deviation $(s)$ as an estimate of the population standard deviation $(\hat{\sigma})$. And this is our $t$-statistic
 
-$$ t = \frac{\bar{X} - \mu}{s/\sqrt{n}} $$
+$$ t = \frac{\bar{x} - \mu}{\frac{s}{\sqrt{n}}} $$
 
 ---
 # Applying a $t$-test
-Suppose we have data from a sample of 10 countries with a mean life expectancy of 66.87 and standard deviation of 5.82.
+Suppose we have data from a sample of 10 countries around the Mediterranean with a mean life expectancy of 74.75 and standard deviation of 3.2.
 
-If our population mean is thought to be 78.16 $(H_0: \sigma = 78.16)$, what is the probability of obtaining a sample mean of 66.87, **or a more extreme mean value**, due to random sampling variability?
-$$t(9) = \frac{66.87 - 75.16}{5.82/\sqrt{10}} = -1.24$$
+If our population mean is thought to be 76 $(H_0: \hat{\mu} = 76)$, what is the probability of obtaining a sample mean of 74.75, **or a more extreme mean value**, due to random sampling variability?
+$$t(9) = \frac{74.75 - 76}{3.2/\sqrt{10}} = -1.24$$
 ```{r}
 ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   stat_function(fun = dt, 
@@ -897,7 +926,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ---
 # Applying a $t$-test
 
-Assuming a population mean of 78.16 and sample size of 10...
+Assuming a population mean of 76 and sample size of 10...
 
 .pull-left[
 ```{r, echo = F}
@@ -924,7 +953,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 ```
 
-...the proportion of random samples that would demonstrate a sample mean **equal to or lower than 66.87** is 0.12 (i.e., *p* = 0.12).
+...the proportion of random samples that would demonstrate a sample mean **equal to or lower than 74.75** is 0.12 (i.e., *p* = 0.12).
 ]
 
 .pull-right[
@@ -959,12 +988,12 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
     theme(plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5))
 ```
-...the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 66.87** is 0.24 (i.e., *p* = 0.24).
+...the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 74.75** is 0.24 (i.e., *p* = 0.24).
 ]
 
-**Note:** One-tailed tests are rarely warranted and we will always be conducting two-tailed tests.
+**Note:** One-tailed tests are rarely warranted and we will generally be conducting two-tailed tests.
 
-> If the null hypothesis is true, the probability of obtaining a sample mean equal to or more extreme 66.87 is 0.24.
+> If the null hypothesis is true, the probability of obtaining a sample mean equal to or more extreme 74.75 is 0.24.
 
 ---
 # One-tailed vs. two-tailed test
@@ -1015,7 +1044,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
                 fill = "red",
                 geom = "area") +
   geom_vline(xintercept = 3.8) + 
-  geom_label(x = 3.8, y = 0.2, label = "Sample Mean", size = 2) +
+  geom_label(x = 3.6, y = 0.2, label = "Sample Mean", size = 4) +
   theme_minimal()
 
 ```
@@ -1158,9 +1187,35 @@ Whether we compare our t-statistic to our critical t-values or our look at our p
 two_tailed_test
 ```
 
-Assuming a population mean of 78.16 and sample size of 10, the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 66.87** is 0.24 $(t = -1.24, p = 0.24)$. Because our p-value does not meet our alpha threshold of .05, we **fail to reject the null hypothesis**.
+Assuming a population mean of 76 and sample size of 10, the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 74.75** is 0.24 $(t = -1.24, p = 0.24)$. Because our p-value does not meet our alpha threshold of .05, we **fail to reject the null hypothesis**.
 
 Thus, we can conclude that the mean life expectancy of this sample of countries around the Mediterranean is not different from the mean population average.
+
+---
+# Implementing in R
+
+Let's examine in our data whether the sample of countries labelled as economically "Developing" have a different average life expectancy than the "true" known population average.
+
+```{r, echo=T}
+low_inc <- filter(who, status=="Developing")
+
+t.test(low_inc$life_expectancy, mu = 71.64)
+
+```
+
+---
+# Implementing in R
+
+Let's examine in our data whether the sample of countries labelled as economically "Developing" have a different average life expectancy than the "true" known population average.
+
+```{r, echo=T}
+# The defaults for t.test are to assume that 
+# you are conducting a two-sided one-sample test,
+# with an alpha threshold of 0.05. You can modify as needed:
+
+t.test(low_inc$life_expectancy, mu = 71.64, alternative = "less")
+
+```
 
 ---
 # Putting it together
@@ -1170,6 +1225,7 @@ Thus, we can conclude that the mean life expectancy of this sample of countries 
 3. Statistics calculated in samples that are drawn repeatedly from a population will form their own distributions. 
 4. Even if the population itself is not normal, the mean of sample means drawn from that population **will** be normal
 5. As a result, we can test whether any observed sample mean is different from the population mean
+6. Depending on whether or not we known the population variance, we can test this using either a $z$- or a $t$-test statistic
 
 .red[**Even if it's not apparent yet, these foundational building blocks will allow you later to compare two groups, characterize the relationship between two variables and more!**]
 
@@ -1180,13 +1236,13 @@ class: middle, inverse
 ---
 # Class goals
 
-- Describe special features of a normal distribution
+- Describe special features of a normal (and standard normal) distribution
+- Interpret a $z$-statistic table
 - Describe the distribution of repeated sample statistics drawn from a population, how this relates to the Central Limit Theorem (CLT) and how this is informative to statistical hypothesis testing
-- Determine whether the mean value of a sample is different than a defined population value (when provided the *SD* of the variable, aka $Z$-test)
-- Conduct one-sample $t$-tests
+- Determine whether the mean value of a sample is different than a defined population mean, both when the population standard deviation of the variable is known ( $z$-test) and when it is unknown (one-sample $t$-test)
 
 ---
-To Dos
+# To Dos
 
 ### Reading
 - LSWR Chapter 10: inference and CLT
