--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -66,7 +66,7 @@ Deadline: October 20, 11:59pm
 Download: [html file](./assignments/assignment02.html) | [cat.csv dataset](./data/cat.csv)
 
 Key: 
-<!-- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
+[doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R)
 
 ## 3.3. Assignment 3 
 
